# ionir

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTROL  GRAMMAR.txt  Ion.IR.sln  Ion.IR.vcxproj  Makefile  README.md  build.bat  build.sh  clean.bat  clean.sh  install_llvm.bat  makefile  portfile.cmake  test.bat
.circleci/: config.yml
Ion.IR/: Ion.IR.vcxproj  Ion.IR.vcxproj.filters  Stream.h  Token.h  TokenType.cpp
Ion.IR/src/: Construct.cpp  Construct.hh  Ion.IR.cpp  LlvmVisitor.cpp  Stream.cpp  Stream.h  Token.h  Token.hh  TokenType.hh
src/: Ion.IR.cpp  README.md
src/Cognition/: Identifier.hpp
src/Constructs/: Block.hpp  Function.hpp  Prototype.hpp  Type.hpp
src/Expr/: BinaryExpr.hpp  Extern.hpp  Function.hpp  Prototype.hpp
src/Expression/: BinaryExpr.hpp  Block.hpp  Function.hpp  Type.hpp  block.hpp
src/Generation/: ExprType.hpp  LlvmVisitor.hpp  llvm_visitor.hpp  visitable.hpp
src/Misc/: Regex.hpp  token_constants.hpp
src/Parsing/: Driver.hpp  GenerationListener.hpp  driver.hpp
src/Syntax/: Lexer.hpp  Token.hpp  TokenStream.hpp  lexer.hpp
src/Type/: TypeName.hpp
src/ast/: ast_builder.cpp  ast_printer.cpp
src/ast_constructs/: binary_expr.h  block.cpp  extern.cpp  global_var.cpp  inst.cpp  prototype.h  section.cpp
src/ast_nodes/: args.cpp  args.h  binary_expr.cpp  binary_expr.h  block.cpp  block.h  extern.cpp  extern.h  function.cpp  function.h  global_var.cpp  global_var.h  if_stmt.cpp  if_stmt.h  inst.cpp  inst.h  inst_kind.h  integer.cpp  integer.h  prototype.cpp  prototype.h  section.cpp  section.h  type.cpp  type.h  value.cpp  value.h  value_kind.h
src/code_gen/: llvm_visitor.cpp  llvm_visitor.h  node.cpp  node.h  node_kind.h  node_type.h  visitable.h  visitor.h
src/cognition/: identifier.hpp
src/const/: const.cpp  const.h  const_name.cpp  const_name.h  constant.cpp  constants.h  token_const.cpp  token_const.h  token_const_complex.cpp  token_const_keyword.cpp  token_const_name.cpp  token_const_operator.cpp  token_const_symbol.cpp
src/constants/: constants.h  token_const.cpp
src/construct/: basic_block.cpp  block.cpp  block.h  child_construct.h  construct.cpp  construct.h  construct_kind.h  expr.cpp  extern.cpp  extern.h  function.cpp  function.h  function_body.cpp  global.cpp  global.h  identifier.cpp  inst.cpp  inst_yield.cpp  module.cpp  prototype.cpp  prototype.h  reference.cpp  reference.h  register_assign.cpp  section.cpp  section.h  section_kind.h  struct.cpp  type.cpp  type.h  value.cpp  variable.cpp  variable_ref.cpp
src/constructs/: args.h  binary_expr.cpp  binary_expr.h  block.cpp  block.h  child_construct.h  child_construct_opts.h  construct.cpp  construct.h  construct_kind.h  extern.cpp  extern.h  function.cpp  function.h  global.cpp  global.h  global_var.cpp  global_var.h  inst_kind.h  prototype.cpp  prototype.h  reference.cpp  reference.h  section.cpp  section.h  type.cpp  type.h  value.cpp  value.h
src/container/: map.h  set.h
src/error_handling/: code_backtrack.cpp  notice_sentinel.cpp
src/expression/: binary_expr.h  binary_expr.hpp  block.h  block.hpp  extern.h  extern.hpp  function.h  function.hpp  prototype.h  prototype.hpp  type.h  type.hpp
src/generation/: expr.h  expr.hpp  expr_type.hpp  llvm_visitor.h  llvm_visitor.hpp
src/lexical/: classifier.cpp  lexer.cpp  lexer.h  token.cpp  token.h  token_identifier.cpp  token_kind.cpp  token_type.cpp  token_type.h
src/llvm/: block.cpp  block.h  const_factory.h  context.cpp  context.h  ir_builder.cpp  ir_builder.h  llvm_block.cpp  llvm_emitted_entities.cpp  llvm_inst.cpp  llvm_module.cpp  module.cpp  module.h
src/misc/: aggregate_builder.cpp  aggregate_builder.h  ast_builder.cpp  basic_generator.h  bootstrap.cpp  code_writer.cpp  console_color.cpp  constants.cpp  constants.h  construct_factory.cpp  function_factory.cpp  function_factory.h  generator.h  helpers.h  identifiable.cpp  inst_builder.cpp  inst_builder.h  iterable.cpp  iterable.h  loose_generator.h  map.cpp  map.h  map.hpp  name_manger.cpp  name_mangler.h  named.cpp  notice.h  notice_context.h  notice_type.h  regex.cpp  regex.h  regex.hpp  stack.h  static_init.cpp  static_init.h  token_constants.cpp  token_constants.h  token_constants.hpp  type_factory.cpp  util.cpp  (+5 more)
src/module/: global_space.cpp  global_space.h  global_space.hpp
src/nodes/: binary_expr.h  block.h  extern.h  function.h  integer.h  prototype.h  type.h
src/parsing/: ast.h  driver.cpp  driver.h  driver.hpp  generation_listener.cpp  generation_listener.h  generation_listener.hpp  parser.cpp  parser.h  partial_inst.cpp  partial_inst.h  scope.cpp  scope.h  scope_kind.h
src/passes/: construct_validation_pass.cpp  partial_resolver.cpp  partial_resolver.h  pass.cpp  pass.h  pass_context.cpp  pass_manager.cpp  pass_manager.h  pass_manager_item.h  pass_priority.h  semantic_analysis.cpp  unused.h  (+3 more)
test/: .root  CMakeLists.txt  ast.cpp  ast_builder.cpp  ast_printer.cpp  builder.cpp  code_backtrack.cpp  code_gen.cpp  inst_builder.cpp  lexer.cpp  main.cpp  map.cpp  name_resolution_pass.cpp  parser.cpp  pass_manager.cpp  pch.cpp  pch.h  ref.cpp  set.cpp  stack.cpp  stack_trace.cpp  stream.cpp  symbol_table.cpp  test.cpp  test_api.cpp  test_util.cpp  test_util.h  token.cpp  type_check_pass.cpp  type_checker_pass.cpp  util.cpp
test/codegen/: code_gen.cpp  full_conversion.cpp
test/construct/: module.cpp
test/input/: extern_simple.iox  function_empty.iox  global_init.iox  inst_alloca.iox  inst_return_i8.iox  inst_return_void.iox  module_empty.iox
test/ir/: function_empty.ll  global_empty.ll  global_init.ll  inst_alloca.ll  inst_alloca_store_return_ref.ll  inst_branch.ll  simple_extern.ll
test/output/: extern_simple.ll  function_empty.ll  global_empty.ll  inst_alloca.ll  inst_branch.ll  inst_return.ll  inst_return_i8.ll
test/passes/: name_resolution_pass.cpp  type_check_pass.cpp
test/test/: test_api.cpp
test/test_api/: bootstrap.cpp  bootstrap.h  compare.cpp  compare.h  constant.h  filesystem.cpp  filesystem.h  misc.cpp  misc.h  util.cpp  util.h
tools/: build.sh  clean.sh  install_llvm.bat  test.bat
(+444 files in other folders)
